--- a/app/src/main/res/layout/activity_display_contact.xml
+++ b/app/src/main/res/layout/activity_display_contact.xml
@@ -40,9 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_edit_white_24dp"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_edit_white_24dp"
         app:fabSize="normal"
         android:background="@color/colorYellow"
         app:backgroundTint="@color/colorYellow"
