--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -72,7 +72,7 @@
             android:layout_height="@dimen/dimen_56dp"
             android:layout_gravity="center"
             android:contentDescription="@string/sign_up_icon"
-            app:srcCompat="@drawable/ic_signup"
+            android:src="@drawable/ic_signup"
             android:layout_toEndOf="@id/llMobile"
             android:layout_marginTop="@dimen/dimen_16dp"
             android:minWidth="@dimen/dimen_56dp"/>
@@ -105,7 +105,7 @@
                 android:id="@+id/btnFacebook"
                 android:layout_width="@dimen/dimen_56dp"
                 android:layout_height="@dimen/dimen_56dp"
-                app:srcCompat="@drawable/ic_facebook"
+                android:src="@drawable/ic_facebook"
                 android:contentDescription="@string/facebook_icon" />
 
             <View
@@ -119,7 +119,7 @@
                 android:id="@+id/btnGoogle"
                 android:layout_width="@dimen/dimen_56dp"
                 android:layout_height="@dimen/dimen_56dp"
-                app:srcCompat="@drawable/ic_google_plus"
+                android:src="@drawable/ic_google_plus"
                 android:contentDescription="@string/google_plus_icon" />
         </LinearLayout>
     </RelativeLayout>
@@ -153,7 +153,7 @@
                 android:layout_height="@dimen/dimen_56dp"
                 android:layout_gravity="center"
                 android:contentDescription="@string/sign_up_icon"
-                app:srcCompat="@drawable/ic_signup" />
+                android:src="@drawable/ic_signup" />
         </LinearLayout>
         <TextView
             android:id="@+id/btnCodeResend"
