--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="@dimen/dimen_8dp"
-    android:elevation="@dimen/dimen_8dp"
-    android:padding="@dimen/dimen_8dp">
+    android:layout_margin="@dimen/dimen_4dp"
+    android:elevation="2dp"
+    android:background="@drawable/myrect">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +17,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="H"
             android:textSize="30sp"
             android:background="@drawable/rounded_textview"
             android:textColor="@android:color/white"
@@ -30,8 +30,9 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/imgDisplayLetter"
             android:textColor="@android:color/black"
-            android:text="Sahil Doshi"
-            android:textSize="24sp"/>
+            android:textSize="24sp"
+            android:singleLine="true"
+            android:layout_marginRight="120dp"/>
 
         <TextView
             android:id="@+id/tvNumber"
@@ -46,7 +47,7 @@
             android:id="@+id/btnMessage"
             android:layout_width="@dimen/dimen_56dp"
             android:layout_height="@dimen/dimen_56dp"
-            app:srcCompat="@drawable/ic_message_yellow_24dp"
+            android:src="@drawable/ic_message_yellow_24dp"
             android:layout_toLeftOf="@id/btnCall"
             android:padding="@dimen/dimen_8dp"/>
 
@@ -55,7 +56,7 @@
             android:layout_width="@dimen/dimen_56dp"
             android:layout_height="@dimen/dimen_56dp"
             android:layout_alignParentEnd="true"
-            app:srcCompat="@drawable/ic_call_yellow_24dp"
+            android:src="@drawable/ic_call_yellow_24dp"
             android:contentDescription="@string/call_person" />
 
     </RelativeLayout>
