--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -3,8 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menuShowMap"
+        android:title="@string/show_map"
+        android:icon="@drawable/ic_map_white_24dp"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/menuLogout"
         android:title="@string/logout"
         android:icon="@drawable/ic_logout"
         app:showAsAction="never"/>
+
 </menu>
