--- a/app/src/main/res/menu/menu_display_contact.xml
+++ b/app/src/main/res/menu/menu_display_contact.xml
@@ -6,5 +6,6 @@
         android:id="@+id/action_delete"
         android:orderInCategory="100"
         android:title="@string/action_delete"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_delete_white_24dp"/>
 </menu>
